css flex pactice

--- a/ClassCss/css/style.css
+++ b/ClassCss/css/style.css
@@ -213,11 +213,18 @@ input:focus{
         display: none;
     }
     .menu-bar{
-        font-size: 2rem;
-        color: white;
+        background-image: url('/ClassCss/image/logo.png');
         display: block;
+        
     }
     .text-content{
         width: 100%;
+    }
+    .social-link{
+        display: flex;
+        gap: 1rem;
+        flex: 1;
+        margin: 0;
+        padding: 0;
     }
 }
